# amtsblatt-berlin-connector

./: .gitignore  PLAN.md  README.md  download.py  pyproject.toml  urls.csv
scripts/: bootstrap_ingest.py  fetch_new.py  rebuild_fts.py  verify_archive.py
src/amtsblatt/: api.py  config.py  db.py  discovery.py  downloader.py  extract.py  mcp_server.py  models.py  quality.py  schema.sql
