[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amtsblatt-mcp"
version = "0.1.0"
description = "MCP server and REST API for Berlin's official gazette (Amtsblatt für Berlin)"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
amtsblatt-mcp = "amtsblatt.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amtsblatt"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]
